trunk/Archive2/97/e611698baf31ad/output
main.cpp: In function ‘int main()’:
main.cpp:16:5: error: ‘cout’ is not a member of ‘std’
     std::cout << "Just to print some output";
     ^
